# rolldown

./: Cargo.toml
crates/rolldown/: Cargo.toml
crates/rolldown/benches/: scan.rs
crates/rolldown/src/: lib.rs
crates/rolldown/src/ast_scanner/: impl_visit.rs  mod.rs
crates/rolldown/src/module_loader/: mod.rs  normal_module_task.rs
crates/rolldown/src/types/: ast_symbols.rs
crates/rolldown_common/: Cargo.toml
crates/rolldown_common/src/types/: ast_scope.rs  exports_kind.rs  import_record.rs  named_export.rs  named_import.rs  normal_module_id.rs  stmt_info.rs  symbol_ref.rs
crates/rolldown_error/: Cargo.toml
crates/rolldown_error/src/: lib.rs  scan.rs
crates/rolldown_error/src/build_error/: mod.rs
crates/rolldown_error/src/events/: forbid_const_assign.rs  unsupported_eval.rs
crates/rolldown_oxc_utils/: Cargo.toml
crates/rolldown_oxc_utils/src/: ast_snippet.rs
crates/rolldown_oxc_utils/src/oxc_ast/: mod.rs
crates/rolldown_rstr/: Cargo.toml
crates/rolldown_rstr/src/: lib.rs
