[package]
edition.workspace    = true
homepage.workspace   = true
license.workspace    = true
name                 = "rolldown_rstr"
repository.workspace = true
version              = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { workspace = true, features = ["derive"] }
oxc     = { workspace = true }

[lints]
workspace = true
